# gatorrank

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  changed.md  docker-compose.yml  frontend_api_layer_plan.md  frontend_refactor.md  plan.md
backend/: .dockerignore  .env.example  .env.supabase  .gitignore  Dockerfile  README.md  config.py  conftest.py  main.py  pyproject.toml  test_supabase_live.py
backend/alembic/: env.py
backend/alembic/versions/: 0db52e9a12fa_merge_usernames_and_slug_heads.py  11bca64bbcf9_add_project_search_indexes.py  1637a3c56c2d_add_comments_table.py  205162b2f24f_set_timestamp_defaults.py  267ed6415e27_split_project_descriptions_and_tighten_.py  377b094d6028_merge_soft_delete_and_taxonomy_heads.py  38d8508979fe_add_comment_likes_table.py  43660c323ec3_add_project_publication_fields.py  43d6b84cf473_add_project_soft_delete.py  587cb6550d2f_add_project_timeline_date_fields.py  5e373bda1732_create_mvp_project_tables.py  5eaf589e841f_add_taxonomy_tables_and_project_term_.py  66ccec161dbe_drop_redundant_users_email_index.py  867e13020b84_drop_redundant_taxonomy_join_indexes.py  8fda3e22245d_cut_over_users_to_supabase_auth.py  a287dfaa6c14_add_comment_likes_table.py  b21b928ae116_add_user_usernames.py  bc2a826321e6_add_auth_password_hash_and_refresh_.py  bcb007443cbb_create_users_table.py  c522d05b3a2a_constrain_comment_moderation_state.py  d529c433d293_reduce_project_title_max_length_to_50.py  d76e8fdc877a_add_project_slug_addressability.py  f87f8bb2d427_add_comments_table.py  (+1 more)
backend/app/: main.py
backend/app/core/: config.py
(+243 files in other folders)
