[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.1",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.11.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "sqlmodel>=0.0.34",
    "supabase>=2.28.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.2.0",
    "testcontainers[postgres]>=4.13.2",
    "psycopg2-binary>=2.9.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
